@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <fuppes_vfolder_config version="0.2">
 
- <vfolder_layout device="default" enabled="true">
+ <vfolder_layout device="default" enabled="false">
 
     <vfolder name="Genre">
       <vfolders property="genre">
@@ -54,12 +54,12 @@
     </vfolder>
     
     <vfolder name="shared dirs">
-      <shared_dirs full_extend="false" />
+      <shared_dirs full_extend="true" />
     </vfolder>
     
   </vfolder_layout>
 
-   <vfolder_layout device="Xbox 360" enabled="false">
+  <vfolder_layout device="Xbox 360" enabled="false">
 
     <vfolder name="Music" id="1">
       <vfolder name="Album" id="7">
@@ -90,7 +90,7 @@
       
       <vfolder name="Playlist" id="15" />
     </vfolder>
-    
+   
     <vfolder name="Pictures" id="3">
       <vfolder name="Album" id="13" />
       
@@ -104,16 +104,18 @@
         <folders filter="contains(imageItem)" />
       </vfolder>
     </vfolder>
-    
+
     <vfolder name="Playlists" id="18">
       <vfolder name="All Playlists" id="19" />
       <vfolder name="Folders" id="23" />
     </vfolder>
-    
+
     <vfolder name="Video" id="2">
       <vfolder name="Actor" id="10" />
       <vfolder name="Album" id="14" />
-      <vfolder name="All Video" id="8" />
+      <vfolder name="All Video" id="8">
+				<items type="videoItem" />
+			</vfolder>
       <vfolder name="Folders" id="21" />
       <vfolder name="Genre" id="9" />
     </vfolder>
